<resources>
    <string name="app_name">Note And Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Note</string>
    <string name="task">Task</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="statistics">Statistics</string>
    <string name="fab_add_content">Add note</string>
    <string name="image_category">image category</string>
    <string name="hint_title">Title</string>
    <string name="note_here">Note here</string>
    <string name="fab_save_note">Save</string>
    <string name="all">All</string>
    <string name="close_icon">close</string>
    <string name="is_notify_icon">is_notify</string>
    <string name="insert_image_icon">insert_image</string>
    <string name="category">Category</string>
    <string name="item_name">Item name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="icon_pin">pin note</string>
    <string name="ok">OK</string>
    <string name="image_option">image option</string>
    <string name="reminder">Reminder</string>
    <string name="add_image">Add image</string>
    <string name="delete">Delete</string>
    <string name="no_repeat">Does not repeat</string>
    <string name="delete_note_verify">Are you sure want to delete note ?</string>
    <string name="repeat">Repeat</string>
    <string name="add_item">Add item</string>
    <string name="add_new_category">New category</string>
    <string name="character_quantity">%d/50</string>
    <string name="image_of_note">image of note</string>
    <string name="image_order">%d/%d</string>
    <string name="delete_picture">Delete picture</string>
    <string name="verify_delete_question">Do you want to delete this picture ?</string>
    <string name="title_error">Title required</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="remove_category_verify">Remove this category ?</string>
    <string name="remove">Remove</string>
    <string name="denied_reminder">This feature requires a permission that you have denied</string>
    <string name="request_permission">Allow Note and Schedule to access photos, media and files on your device ?</string>
    <string name="allow">Allow</string>
    <string name="no_thanks">No thanks</string>
    <string name="no_item_selected_remind">No item selected</string>
    <string name="submit_remove_notes">Are you sure you want to remove these note forever ?</string>
    <string name="selected_item_quantity">%d Item</string>
    <string name="today">Today</string>
    <string name="total">Total</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="task_name">Task name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="forever">Forever</string>
    <string name="days_of_the_week">Days of the week</string>
    <string name="all_day">All day</string>
    <string name="add_notification">Add notification</string>
    <string name="subtasks">Subtasks</string>
    <string name="add_subtask">Add subtask</string>
    <string name="task_name_required">Enter your task name !</string>
    <string name="yes">Yes</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="filter_by">Filter by</string>
    <string name="schedule">Schedule</string>
    <string name="check_list">%d/%d</string>
    <string name="item">Item</string>
    <string name="new_item">New item</string>
    <string name="list_state">list_state</string>
    <string name="grid">grid</string>
    <string name="linear">linear</string>
    <string name="d">grid</string>
    <string name="list_arrange">list_arrange</string>
    <string name="due_date">due_date</string>
    <string name="note_title">note_title</string>
    <string name="sort_by">Sort by</string>
    <string name="edit">Edit</string>

    <string-array name="array_repeat">
        <item>Does not repeat</item>
        <item>Every day</item>
        <item>Every month</item>
        <item>Every year</item>
    </string-array>

    <string-array name="array_option_sort">
        <item>Date (Ascending)</item>
        <item>Date (Descending)</item>
        <item>Title (A - Z)</item>
        <item>Title (Z - A)</item>
    </string-array>

    <string-array name="array_option_filter">
        <item>All</item>
        <item>Pending</item>
        <item>Done</item>
        <item>Skip</item>
    </string-array>
</resources>