<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/margin_add_item"
    android:padding="@dimen/component_margin_vertical"
    android:background="@drawable/dialog_reminder_shape"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView_title"
        style="@style/dialog_reminder_text_style"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_new_category"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/editText_item_name"
        style="@style/dialog_reminder_text_style"
        android:background="@drawable/item_reminder_shape"
        app:layout_constraintTop_toBottomOf="@id/textView_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/app_margin"
        tools:text="Item"
        android:ellipsize="end"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:gravity="center_vertical"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        tools:ignore="LabelFor"
        android:focusedByDefault="true"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editText_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="10/50"
        android:textColor="@color/white"
        android:textSize="@dimen/notation_text_size"
        android:layout_marginTop="@dimen/min_app_margin" />

    <TextView
        android:id="@+id/textView_cancel"
        style="@style/dialog_reminder_text_style"
        android:background="@drawable/category_text_shape"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_character"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textView_set"
        android:layout_marginTop="@dimen/component_margin_vertical"
        android:text="@string/cancel"
        android:textColor="@color/primary_color"/>

    <TextView
        android:id="@+id/textView_set"
        style="@style/dialog_reminder_text_style"
        android:background="@drawable/category_text_shape"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textView_character"
        app:layout_constraintStart_toEndOf="@id/textView_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/component_margin_vertical"
        android:text="@string/ok"
        android:textColor="@color/primary_color" />

</androidx.constraintlayout.widget.ConstraintLayout>