<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.note.AddNoteFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view"
        android:layout_marginBottom="@dimen/padding_component">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/app_margin">

            <ImageView
                android:id="@+id/image_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin"
                android:clickable="true"
                android:contentDescription="@string/close_icon"
                android:focusable="true"
                android:src="@drawable/icon_save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/image_option"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/app_margin"
                android:layout_marginEnd="@dimen/title_margin_vertical"
                android:contentDescription="@string/icon_pin"
                android:src="@drawable/icon_unpin" />

            <TextView
                android:id="@+id/textView_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/min_app_margin"
                android:gravity="center_vertical"
                android:textSize="@dimen/notation_text_size"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/icon_notifications_active"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/image_save"
                app:layout_constraintBottom_toBottomOf="@id/image_save"
                tools:text="12:00" />

            <ImageView
                android:id="@+id/image_option"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin"
                android:contentDescription="@string/image_option"
                android:src="@drawable/icon_option"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_add_item"
                android:clickable="true"
                android:drawablePadding="@dimen/min_app_margin"
                android:focusable="true"
                android:gravity="center_vertical"
                android:textSize="@dimen/notation_text_size"
                app:drawableEndCompat="@drawable/icon_edit_calendar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_save"
                tools:text="31/12/2025" />

            <Spinner
                android:id="@+id/spin_category"
                android:layout_width="@dimen/min_height_card"
                android:layout_height="wrap_content"
                android:background="@drawable/category_spinner_bg"
                android:dropDownVerticalOffset="@dimen/margin_spinner"
                android:spinnerMode="dropdown"
                app:layout_constraintBottom_toBottomOf="@id/textView_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView_date"
                android:popupBackground="@drawable/reminder_shape"/>

            <EditText
                android:id="@+id/editText_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView_date"
                android:background="@null"
                android:hint="@string/hint_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:autofillHints="Title"
                android:inputType="textCapSentences"
                android:ellipsize="end"
                android:maxLines="1"
                android:scrollHorizontally="true"/>

            <EditText
                android:id="@+id/editText_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_vertical"
                android:background="@null"
                android:hint="@string/note_here"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textLongMessage|textCapSentences"
                android:maxLines="5"
                android:textSize="@dimen/text_size_normal"
                android:maxLength="200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_add_item"
                app:layout_constraintBottom_toTopOf="@id/textView_add_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_description" />

            <TextView
                android:id="@+id/textView_add_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/title_margin_vertical"
                android:drawablePadding="@dimen/app_margin"
                android:text="@string/add_item"
                android:textColor="@color/primary_color"
                android:textSize="@dimen/text_size_normal"
                app:drawableStartCompat="@drawable/icon_add_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_item"
                android:gravity="center_vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/view"
        android:layout_above="@id/recycler_image"
        style="@style/ven_style" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/weight_white"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

</RelativeLayout>